# NekolunaRIDScanner

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md
esp32-crid-sim-OTA/: .gitignore  CMakeLists.txt
esp32-crid-sim-OTA/.github/workflows/: build_and_release.yml
esp32-crid-sim-OTA/main/: CMakeLists.txt  crid_cli.c  crid_patrol.c  crid_patrol.h  encode_astm.c  encode_astm.h  encode_gb42590.c  encode_gb42590.h  main.c  rid_config.c  rid_config.h  rid_wifi.c  rid_wifi.h
main_rx/: CMakeLists.txt  app_main.c  crid_ble.c  crid_ble.h  crid_json.c  crid_json.h  crid_rx_types.h  crid_sniffer.c  crid_usb_net.c
